fix adaptive brackpoints

--- a/src/modules/catalogPage/_productCatalog.scss
+++ b/src/modules/catalogPage/_productCatalog.scss
@@ -1,6 +1,10 @@
 .catalog {
     &__inner {
+        margin-bottom: 60px;
+    }
 
+    &__title {
+        margin-bottom: 0;
     }
 
     &__wrapper {
