--- a/src/modules/catalogPage/breadcrumbs/_breadcrumbs.scss
+++ b/src/modules/catalogPage/breadcrumbs/_breadcrumbs.scss
@@ -1,5 +1,5 @@
 .breadcrumbs {
-    background: rgba(255, 104, 56, 0.10);
+    background-color: rgba($orange-900, 0.10);
     margin-bottom: 60px;
 
     &__inner {
