--- a/src/modules/mainPage/categories/_categories.scss
+++ b/src/modules/mainPage/categories/_categories.scss
@@ -10,9 +10,9 @@
         margin-bottom: 45px;
         gap: 20px;
         justify-content: center;
-        padding: 0.5px 0.5px 5px 0.5px;
+        padding: 2px;
 
-        @include r(1200) {
+        @include r($r-xs) {
             flex-wrap: nowrap;
             gap: 10px;
             margin-bottom: 30px;
@@ -32,7 +32,7 @@
         white-space: nowrap;
         gap: 10px;
 
-        @include r(768) {
+        @include r($r-sm) {
             font-size: 14px;
             padding: 12px 16px;
             gap: 5px;
@@ -42,7 +42,7 @@
             width: 44px;
             height: 44px;
 
-            @include r(768) {
+            @include r($r-sm) {
                 width: 20px;
                 height: 20px;
             }
@@ -108,7 +108,7 @@
             border-bottom-color: $darkBlue-900;
         }
 
-        @include r(768) {
+        @include r($r-sm) {
             &::after {
                 bottom: 2px;
             }
