--- a/src/modules/mainPage/features/_features.scss
+++ b/src/modules/mainPage/features/_features.scss
@@ -12,7 +12,7 @@
         position: relative;
         z-index: 1;
 
-        @include r(1200) {
+        @include r($r-lg) {
             &::before {
                 content: "";
                 background-color: rgba($white, 0.85);
@@ -25,13 +25,13 @@
             }
         }
 
-        @include r(992) {
+        @include r($r-md) {
             align-items: center;
             justify-content: center;
             min-height: 462px;
         }
 
-        @include r(576) {
+        @include r($r-xs) {
             padding: 0;
         }
     }
@@ -40,7 +40,7 @@
         max-width: 470px;
         margin-top: 58px;
 
-        @include r(992) {
+        @include r($r-md) {
             margin-top: 0;
         }
     }
@@ -57,7 +57,7 @@
 
     &__text {
 
-        @include r(576) {
+        @include r($r-xs) {
             margin-bottom: 20px;
         }
 
@@ -65,7 +65,7 @@
             font-size: 20px;
             line-height: 1.5;
 
-            @include r(992) {
+            @include r($r-md) {
                 font-size: 18px;
             }
         }
@@ -83,7 +83,7 @@
         font-size: 24px;
         gap: 30px;
 
-        @include r(992) {
+        @include r($r-md) {
             font-size: 18px;
             gap: 10px;
             margin-bottom: 15px;
@@ -98,7 +98,7 @@
     &__btn {
         font-size: 18px;
 
-        @include r(992) {
+        @include r($r-md) {
             font-size: 14px;
         }
     }
