--- a/src/modules/mainPage/hero/_hero.scss
+++ b/src/modules/mainPage/hero/_hero.scss
@@ -11,7 +11,7 @@
         position: relative;
         z-index: 1;
 
-        @include r(992) {
+        @include r($r-md) {
 
             min-height: 455px;
 
@@ -27,7 +27,7 @@
             }
         }
 
-        @include r(576) {
+        @include r($r-xs) {
             align-items: center;
             min-height: 300px;
         }
@@ -44,7 +44,7 @@
         margin-bottom: 20px;
         color: $darkBlue-900;
 
-        @include r(576) {
+        @include r($r-xs) {
             font-size: 40px;
         }
     }
@@ -55,7 +55,7 @@
         margin-bottom: 20px;
 
 
-        @include r(576) {
+        @include r($r-xs) {
             font-size: 16px;
             line-height: 1.5;
         }
@@ -66,7 +66,7 @@
         margin-right: 20px;
         font-size: 18px;
 
-        @include r(576) {
+        @include r($r-xs) {
             font-size: 14px;
             border-radius: 3px;
         }
