--- a/src/modules/mainPage/restcard/_restcard.scss
+++ b/src/modules/mainPage/restcard/_restcard.scss
@@ -1,10 +1,10 @@
 .rest-card {
     max-width: 370px;
     border-radius: 10px;
-    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.10);
+    box-shadow: 0 3px 3px 0 rgba($darkBlue-900, 0.10);
     background-color: $white;
 
-    @include r(768) {
+    @include r($r-sm) {
         margin-bottom: 30px;
     }
 
@@ -38,7 +38,7 @@
         width: 100%;
         @include line-clamp(1);
 
-        @include r(992) {
+        @include r($r-md) {
             font-size: 18px;
         }
     }
@@ -53,7 +53,7 @@
             height: 22px;
         }
 
-        @include r(992) {
+        @include r($r-md) {
             font-size: 14px;
         }
     }
@@ -83,7 +83,7 @@
                 transform: translateX(25px);
                 background-color: $orange-900;
 
-                @include r(992) {
+                @include r($r-md) {
                     transform: translateX(12px);
                 }
             }
@@ -98,7 +98,7 @@
             }
         }
 
-        @include r(992) {
+        @include r($r-md) {
             width: 52px;
             height: 25px;
         }
