--- a/src/modules/mainPage/application/_application.scss
+++ b/src/modules/mainPage/application/_application.scss
@@ -7,20 +7,38 @@
         background-position: right;
         background-size: contain;
         min-height: 380px;
+        position: relative;
+        z-index: 1;
 
         @include r($r-lg) {
-            background-image: none !important;
-            min-height: fit-content;
-            justify-content: center;
+            min-height: 300px;
+        }
+
+        @include r($r-md) {
+
+            &::before {
+                content: "";
+                background-color: rgba($white, 0.85);
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+            }
         }
 
         @include r($r-xs) {
             justify-content: flex-start;
+            background-image: none !important;
+            min-height: 200px;
         }
+
     }
 
     &__box {
         max-width: 470px;
+
     }
 
     &__title {
