--- a/src/modules/mainPage/reviewCard/_reviewCard.scss
+++ b/src/modules/mainPage/reviewCard/_reviewCard.scss
@@ -15,6 +15,8 @@
 
         @include r($r-md) {
             margin: 0 0 30px 0;
+            width: 150px;
+            height: 150px;
         }
 
         @include r($r-sm) {
