--- a/src/modules/components/footer/_footer.html
+++ b/src/modules/components/footer/_footer.html
@@ -6,7 +6,7 @@
             <div class="footer__box">
 
                 <a class="logo footer__logo" href="#">
-                    <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                    <img class="logo__img" src="./assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">  
                 </a>
 
                 <form class="form" action="#">
