--- a/src/modules/components/header/_header.html
+++ b/src/modules/components/header/_header.html
@@ -4,16 +4,16 @@
         <nav class="menu">
 
             <a class="logo header__logo" href="#hero">
-                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                <img class="logo__img" src="./assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
             <ul class="menu__list">
                 <li class="menu__item">
-                    <a class="menu__link menu__link--active" href="../../index.html">Головна</a>
+                    <a class="menu__link menu__link--active" href="./index.html">Головна</a>
                 </li>
 
                 <li class="menu__item">
-                    <a class="menu__link" href="../../catalog.html">Страви</a>
+                    <a class="menu__link" href="./catalog.html">Страви</a>
                 </li>
 
                 <li class="menu__item">
@@ -40,7 +40,7 @@
                 </li>
             </ul>
 
-            @include('../../mobileMenu/_mobileMenu.html')
+            @include('../mobile-menu/_mobile-menu.html')
 
         </nav>
     </div>
