--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -3,8 +3,8 @@
     font-weight: 300;
     font-style: normal;
     src:
-        url('../fonts/Rubik-Light.woff2') format('woff2'),
-        url('../fonts/Rubik-Light.woff') format('woff');
+        url('../assets/fonts/Rubik-Light.woff2') format('woff2'),
+        url('../assets/fonts/Rubik-Light.woff') format('woff');
     font-display: swap;
 }
 
@@ -13,8 +13,8 @@
     font-weight: 400;
     font-style: italic;
     src:
-        url('../fonts/Rubik-Italic.woff2') format('woff2'),
-        url('../fonts/Rubik-Italic.woff') format('woff');
+        url('../assets/fonts/Rubik-Italic.woff2') format('woff2'),
+        url('../assets/fonts/Rubik-Italic.woff') format('woff');
     font-display: swap;
 }
 
@@ -23,8 +23,8 @@
     font-weight: 400;
     font-style: normal;
     src:
-        url('../fonts/Rubik-Regular.woff2') format('woff2'),
-        url('../fonts/Rubik-Regular.woff') format('woff');
+        url('../assets/fonts/Rubik-Regular.woff2') format('woff2'),
+        url('../assets/fonts/Rubik-Regular.woff') format('woff');
     font-display: swap;
 }
 
@@ -33,8 +33,8 @@
     font-weight: 500;
     font-style: normal;
     src:
-        url('../fonts/Rubik-Medium.woff2') format('woff2'),
-        url('../fonts/Rubik-Medium.woff') format('woff');
+        url('../assets/fonts/Rubik-Medium.woff2') format('woff2'),
+        url('../assets/fonts/Rubik-Medium.woff') format('woff');
     font-display: swap;
 }
 
@@ -43,7 +43,7 @@
     font-weight: 700;
     font-style: normal;
     src:
-        url('../fonts/Rubik-Bold.woff2') format('woff2'),
-        url('../fonts/Rubik-Bold.woff') format('woff');
+        url('../assets/fonts/Rubik-Bold.woff2') format('woff2'),
+        url('../assets/fonts/Rubik-Bold.woff') format('woff');
     font-display: swap;
 }
