--- a/src/modules/components/breadcrumbs/_breadcrumbs.html
+++ b/src/modules/components/breadcrumbs/_breadcrumbs.html
@@ -7,13 +7,13 @@
         <ul class="breadcrumbs__list">
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link link" href="../../index.html">
+                <a class="breadcrumbs__link link" href="./index.html">
                     Головна
                 </a>
             </li>
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link link" href="../../catalog.html">
+                <a class="breadcrumbs__link link" href="./catalog.html">
                     Каталог продуктів
                 </a>
             </li>
