--- a/src/modules/components/cards/rest-card/_rest-card.scss
+++ b/src/modules/components/cards/rest-card/_rest-card.scss
@@ -1,5 +1,6 @@
 .rest-card {
     max-width: 370px;
+    height: fit-content;
     border-radius: 10px;
     box-shadow: 0 3px 3px 0 rgba($darkBlue-900, 0.10);
     background-color: $white;
