--- a/src/modules/components/head/_head.html
+++ b/src/modules/components/head/_head.html
@@ -11,5 +11,6 @@
 
     
     <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet" />
+    <link href="./css/nouislider.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
