--- a/src/modules/components/cards/promo-card/_promo-card.html
+++ b/src/modules/components/cards/promo-card/_promo-card.html
@@ -1,17 +1,15 @@
 <li class="@promoClass">
-    <article class="rest-card">
+
+    <article class="rest-card promo-card">
+
         <a class="rest-card__link" href="#">
             <img class="rest-card__img" src="@restImageUrl" alt="@resttAlt" width="370" height="300">
         </a>
-        <p class="promo-card__text">@promoText</p>
-        <div class="rest-card__box rest-card__box--hide">
-            <span class="rest-card__title">@restTitle</span>
-            <span class="rest-card__time icon icon--time">
-                <time datetime="T11:00">@restFirstTime</time>&nbsp;-&nbsp;<time datetime="T22:00">@restSecondTime</time>
-            </span>
-            <button class="btn rest-card__btn icon icon--arrow" type="button">
-                <span class="sr-only">Додати товар до корзини</span>
-            </button>
-        </div>
+
+        <p class="promo-card__text">
+            @promoText
+        </p>
+
     </article>
+
 </li>
