--- a/src/modules/components/cards/review-card/_review-card.html
+++ b/src/modules/components/cards/review-card/_review-card.html
@@ -1,7 +1,5 @@
 <li class="@reviewClass">
-    <img class="review-card__img" src="@reviewImageUrl" alt="@productAlt"
-        srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
-        sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+    <img class="review-card__img" src="@reviewImageUrl" alt="@productAlt" width="300" height="300">
     <blockquote class="review-card__blockquote">
 
         <div class="review-card__text">
