--- a/src/modules/pages/catalog/catalog-price/_catalog-price.scss
+++ b/src/modules/pages/catalog/catalog-price/_catalog-price.scss
@@ -1,4 +1,7 @@
 .catalog-price {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     max-width: 270px;
     background-color: $white;
     border: 1px solid $silver-200;
