--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import '../modules/components/cards/review-card/review-card';
 @import '../modules/components/swiperjs/swiperjs';
 @import '../modules/components/slider-price/slider-price';
+@import '../modules/components/dropdown/dropdown';
 
 // main page
 
