--- a/src/modules/pages/catalog/catalog-offers/_catalog-offers.scss
+++ b/src/modules/pages/catalog/catalog-offers/_catalog-offers.scss
@@ -12,60 +12,48 @@
     }
 }
 
-.catalog-checkbox {
-
-    &__label {
-        position: relative;
-        cursor: pointer;
-        display: block;
-        padding-left: 25px;
-    }
-
-    &__input {
-        position: absolute;
-        cursor: pointer;
-
-        &:checked ~ .catalog-checkbox__checkmark {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            
-            &::before {
-                @extend .icon;
-                @extend .icon--check;
-                width: 12px;
-                height: 8px;
-            }
-        }
-    }
-
-    &__checkmark {
-        position: absolute;
-        border-radius: 3px;
-        top: 0;
-        left: 0;
-        height: 24px;
-        width: 24px;
-        border: 1px solid $silver-200;
-        background-color: rgba($orange-900, 0.20);
-    }
-
-    &__text {
-        margin-left: 12px;
-    }
-}
-
-.catalog-checkbox__label.checked .catalog-checkbox__checkmark {
-
+.checkbox-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    font-family: Arial, sans-serif;
+    margin-bottom: 10px; // Добавляем отступ между чекбоксами
 
-    .catalog-checkbox__checkmark::before {
-        @extend .icon;
-        @extend .icon--check;
-        width: 12px;
-        height: 8px;
+    input[type="checkbox"].custom-checkbox {
+        // Скрываем оригинальный чекбокс
+        display: none;
+
+        // Создаем стили для кастомизированного чекбокса
+        &+.custom-checkbox-label {
+            position: relative;
+            padding-left: 25px;
+            cursor: pointer;
+            user-select: none;
+            font-size: 16px;
+        }
+
+        &+.custom-checkbox-label:before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 18px;
+            height: 18px;
+            border: 1px solid #000;
+            border-radius: 3px;
+            background-color: #fff;
+        }
+
+        &:checked+.custom-checkbox-label:before {
+            background-color: #2196F3; // Цвет, который появляется, когда чекбокс отмечен
+        }
+
+        &:checked+.custom-checkbox-label:after {
+            content: '\2713'; // Галочка
+            position: absolute;
+            top: 1px;
+            left: 4px;
+            color: #fff;
+            font-size: 14px;
+        }
     }
-
 }
