--- a/src/modules/pages/catalog/catalog-offers/_catalog-offers.scss
+++ b/src/modules/pages/catalog/catalog-offers/_catalog-offers.scss
@@ -10,50 +10,10 @@
         flex-direction: column;
         gap: 13px;
     }
-}
 
-.checkbox-container {
-    display: flex;
-    align-items: center;
-    font-family: Arial, sans-serif;
-    margin-bottom: 10px; // Добавляем отступ между чекбоксами
-
-    input[type="checkbox"].custom-checkbox {
-        // Скрываем оригинальный чекбокс
-        display: none;
-
-        // Создаем стили для кастомизированного чекбокса
-        &+.custom-checkbox-label {
-            position: relative;
-            padding-left: 25px;
-            cursor: pointer;
-            user-select: none;
-            font-size: 16px;
-        }
-
-        &+.custom-checkbox-label:before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 18px;
-            height: 18px;
-            border: 1px solid #000;
-            border-radius: 3px;
-            background-color: #fff;
-        }
-
-        &:checked+.custom-checkbox-label:before {
-            background-color: #2196F3; // Цвет, который появляется, когда чекбокс отмечен
-        }
-
-        &:checked+.custom-checkbox-label:after {
-            content: '\2713'; // Галочка
-            position: absolute;
-            top: 1px;
-            left: 4px;
-            color: #fff;
-            font-size: 14px;
-        }
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
     }
 }
