--- a/src/modules/components/dropdown/_dropdown.html
+++ b/src/modules/components/dropdown/_dropdown.html
@@ -1,25 +1,37 @@
 <div class="dropdown">
 
-    <label for="toggle1" class="dropdown__text icon icon--chevron-down">За ціною</label>
-    <input type="checkbox" id="toggle1" class="dropdown__toggle">
+    <label for="dropdown1" class="dropdown__text icon icon--chevron-down">За ціною</label>
+    <input type="checkbox" id="dropdown1" class="dropdown__toggle">
 
     <ul class="dropdown__content">
-        <li><a class="dropdown__link" href="#">За ціною</a></li>
-        <li><a class="dropdown__link" href="#">За назвою</a></li>
-        <li><a class="dropdown__link" href="#">За розміром</a></li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За ціною</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За назвою</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">За розміром</button>
+        </li>
     </ul>
 
 </div>
 
 <div class="dropdown">
 
-    <label for="toggle2" class="dropdown__text icon icon--chevron-down">По 12</label>
-    <input type="checkbox" id="toggle2" class="dropdown__toggle">
+    <label for="dropdown2" class="dropdown__text icon icon--chevron-down">По 12</label>
+    <input type="checkbox" id="dropdown2" class="dropdown__toggle">
 
     <ul class="dropdown__content">
-        <li><a class="dropdown__link" href="#">По 12</a></li>
-        <li><a class="dropdown__link" href="#">По 8</a></li>
-        <li><a class="dropdown__link" href="#">По 4</a></li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 12</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 8</button>
+        </li>
+        <li class="dropdown__item">
+            <button class="dropdown__btn" href="#">По 4</button>
+        </li>
     </ul>
 
 </div>
