fix catalog page

--- a/src/modules/components/breadcrumbs/_breadcrumbs.html
+++ b/src/modules/components/breadcrumbs/_breadcrumbs.html
@@ -13,7 +13,7 @@
             </li>
 
             <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link link" href="./catalog.html">
+                <a class="breadcrumbs__link link  icon icon--chevron-right" href="./catalog.html">
                     Каталог продуктів
                 </a>
             </li>
