--- a/src/modules/components/cards/rest-card/_rest-card.html
+++ b/src/modules/components/cards/rest-card/_rest-card.html
@@ -6,7 +6,7 @@
         <div class="rest-card__box">
             <span class="rest-card__title">@restTitle</span>
             <span class="rest-card__time icon icon--time">
-                <time datetime="T11:00">@restFirstTime</time>&nbsp;-&nbsp;<time datetime="T22:00">@restSecondTime</time>
+                <time datetime="@restFirstTimeDataTipe">@restFirstTime</time>&nbsp;-&nbsp;<time datetime="@restFirstTimeDataTipe">@restSecondTime</time>
             </span>
             <button class="btn rest-card__btn icon icon--arrow" type="button">
                 <span class="sr-only">Додати товар до корзини</span>
