--- a/src/modules/components/checkbox/_checkbox.html
+++ b/src/modules/components/checkbox/_checkbox.html
@@ -9,8 +9,8 @@
 
 <div class="checkbox">
 
-    <input type="checkbox" id="newArrivalCheckbox" class="checkbox__input">
-    <label for="newArrivalCheckbox" class="checkbox__label icon icon--check">
+    <input type="checkbox" id="newCheckbox" class="checkbox__input">
+    <label for="newCheckbox" class="checkbox__label icon icon--check">
         Новинка
     </label>
 
@@ -18,8 +18,8 @@
 
 <div class="checkbox">
 
-    <input type="checkbox" id="seasonalHitCheckbox" class="checkbox__input">
-    <label for="seasonalHitCheckbox" class="checkbox__label icon icon--check">
+    <input type="checkbox" id="seasonHitCheckbox" class="checkbox__input">
+    <label for="seasonHitCheckbox" class="checkbox__label icon icon--check">
         Хіт сезону
     </label>
 
