--- a/src/modules/components/header/_header.html
+++ b/src/modules/components/header/_header.html
@@ -40,7 +40,8 @@
                 </li>
             </ul>
 
-            @include('../mobile-menu/_mobile-menu.html')
+            <!-- @include('../mobile-menu/_mobile-menu.html') -->
+            @include('../mobile-menu/mobile-menu--catalog/_mobile-menu--catalog.html')
 
         </nav>
     </div>
