--- a/src/modules/components/mobile-menu/_mobile-menu.html
+++ b/src/modules/components/mobile-menu/_mobile-menu.html
@@ -9,7 +9,7 @@
         <div class="mobile-menu__header">
 
             <a class="logo mobile-menu__logo" href="#header">
-                <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
+                <img class="logo__img" src="../assets/images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
             <button class="burger__close icon icon--burger-close" type="button">
