--- a/src/modules/components/pagination/_pagination.html
+++ b/src/modules/components/pagination/_pagination.html
@@ -5,69 +5,69 @@
     <ul class="pagination__list">
 
         <li class="pagination__item">
-            <button class="pagination__btn pagination__btn--active btn">
+            <a href="#" class="pagination__link pagination__link--active">
                 1
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 2
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 ...
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 3
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 4
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 5
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 6
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 7
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 8
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 9
-            </button>
+            </a>
         </li>
 
         <li class="pagination__item">
-            <button class="pagination__btn btn">
+            <a href="#" class="pagination__link">
                 10
-            </button>
+            </a>
         </li>
         
     </ul>
