--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import '../modules/components/footer/footer';
 @import '../modules/components/header/header';
 @import '../modules/components/mobile-menu/mobile-menu';
+@import '../modules/components/mobile-menu/mobile-menu--catalog/mobile-menu--catalog';
 @import '../modules/components/pagination/pagination';
 
 @import '../modules/components/cards/product-card/product-card';
@@ -23,6 +24,7 @@
 @import '../modules/components/checkbox/checkbox';
 @import '../modules/components/rating/rating';
 @import '../modules/components/change-count/change-count';
+@import '../modules/components/price-box/price-box';
 
 // main page
 
