--- a/src/modules/components/head/_head.html
+++ b/src/modules/components/head/_head.html
@@ -1,15 +1,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Food</title>
+    <title>@title</title>
 
     <link href="../assets/icons/favicon/favicon.ico" rel="icon" sizes="48x48">
     <link href="../assets/icons/favicon/favicon.svg" rel="icon" sizes="any" type="image/svg+xml">
-    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest" />
-    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838" />
+    <link href="../assets/icons/favicon/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/icons/favicon/site.webmanifest" rel="manifest">
+    <link href="../assets/icons/favicon/safari-pinned-tab.svg" rel="mask-icon" color="#ff6838">
 
-    <link href="https://cdn.jsdelivr.net/npm/swiper@11.0.5/swiper-bundle.min.css" rel="stylesheet">
+    <link href="./css/swiperjs.min.css" rel="stylesheet">
     <link href="./css/nouislider.min.css" rel="stylesheet">
     <link href="./css/style.min.css" rel="stylesheet">
 </head>
