--- a/src/modules/pages/catalog/catalog-price/_catalog-price.scss
+++ b/src/modules/pages/catalog/catalog-price/_catalog-price.scss
@@ -8,65 +8,10 @@
     border-radius: 5px;
     padding: 15px 15px 25px 15px;
 
-    &__wrapper {
-        display: flex;
-    }
-
-    &__box {
+    &__form {
         display: flex;
         gap: 15px;
         margin-bottom: 25px;
     }
 
-    &__lable {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-    }
-
-    &__text {
-        font-size: 16px;
-        letter-spacing: 0.48px;
-        line-height: 1.2;
-        color: $gray;
-    }
-
-    &__input {
-        border: 1px solid rgba(255, 104, 56, 0.10);
-        background: #FAEDED;
-        border-radius: 3px;
-        padding: 12px;
-        width: 70px;
-        height: 40px;
-        text-align: center;
-    }
-
-    &__min {
-        display: flex;
-    }
-
-    &__max {
-        display: flex;
-    }
-}
-
-.catalog-price__range {
-    display: flex;
-}
-
-.catalog-price__input-range {
-    width: 100%;
-    height: 2px;
-    border-radius: 5px;
-    background-color: $orange-900;
-}
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0; 
-}
-
-input[type="number"] {
-    font-size: 16px; /* Замените значение на желаемый размер шрифта */
 }
