--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -9,6 +9,8 @@ $grayLight: #eeeff3;
 $gray: #c2c2c2;
 $darkBlue-900: #363853;
 $dark: #31352b;
+
+$black: #000000;
 $white: #ffffff;
 $red: #FF2222;
 $blue: #00AAFF;
