adaptive catalog page

--- a/src/modules/pages/catalog/catalog-promo/_catalog-promo.scss
+++ b/src/modules/pages/catalog/catalog-promo/_catalog-promo.scss
@@ -1,7 +1,11 @@
 .promo {
-    // &__content {
-    //     display: flex;
-    // }
+    display: flex;
+
+    &__title {
+        @include r($r-md) {
+            margin-bottom: 30px;
+        }
+    }
 
     &__list {
         display: flex;
