--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -192,4 +192,11 @@
             mask-image: url('../assets/icons/sprite.svg#icon-minus');
         }
     }
+
+    &--icon-filters {
+        &::before {
+            mask-image: url('../assets/icons/sprite.svg#icon-filters');
+        }
+    }
+    
 }
