--- a/src/modules/components/cards/promo-card/_promo-card.scss
+++ b/src/modules/components/cards/promo-card/_promo-card.scss
@@ -1,10 +1,17 @@
 .promo-card {
-    min-height: 392px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    max-height: 400px;
+    height: 100% !important;
 
     &__text {
+        @include line-clamp(2);
         padding: 0 20px 15px 20px;
         font-size: 24px;
     }
 
+}
+
+.promo-item {
+    flex-shrink: 1;
 }
