--- a/src/modules/components/dropdown/_dropdown.scss
+++ b/src/modules/components/dropdown/_dropdown.scss
@@ -1,6 +1,7 @@
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: flex;
+    gap: 20px;
 
     &__text {
         display: flex;
