--- a/src/modules/pages/catalog/_catalog.scss
+++ b/src/modules/pages/catalog/_catalog.scss
@@ -1,18 +1,101 @@
 .catalog {
 
+    &__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        gap: 15px;
+
+        @include r($r-sm) {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
+
     &__title {
         margin-bottom: 0;
+    }
+
+    &__filters {
+        display: flex;
+        gap: 20px;
+        justify-content: space-between;
+
+        @include r($r-sm) {
+            width: 100%;
+        }
+    }
+
+    &__filter-btn {
+        display: none;
+        padding: 0 10px;
+        outline: 1px solid transparent;
+        transition: background-color 0.4s, outline-color 0.4s;
+
+        &:hover {
+            background-color: $orange-900;
+            transition: background-color 0.4s;
+
+            &::before {
+                background-color: $white;
+            }
+        }
+
+        &:focus {
+            background-color: $peorpleLight;
+            outline-color: $orange-900;
+        }
+
+        &:active {
+            background-color: $peorpleLight;
+        }
+
+        &::before {
+            width: 32px;
+            height: 36px;
+            background-color: $orange-900;
+        }
+
+        @include r($r-sm) {
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    &__dropdown {
+        display: flex;
+        gap: 20px;
     }
 
     &__wrapper {
         display: flex;
         gap: 30px;
+
+        @include r($r-xs) {
+            justify-content: center;
+        }
     }
 
     &__top {
         display: flex;
         justify-content: space-between;
         margin-bottom: 60px;
+
+        @include r($r-md) {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__sidebar {
+        display: flex;
+        flex-direction: column;
+        max-width: 270px;
+        gap: 30px;
+
+        @include r($r-sm) {
+            display: none;
+        }
     }
 
     &__list {
@@ -21,12 +104,19 @@
         gap: 10px;
         margin-bottom: 60px;
         align-items: center;
-    }
-}
 
-.sidebar {
-    display: flex;
-    flex-direction: column;
-    max-width: 270px;
-    gap: 30px;
+        @include r($r-md) {
+            margin-bottom: 30px;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            grid-template-rows: repeat(3, minmax(0, 1fr));
+            grid-auto-rows: repeat(3, minmax(0, 1fr));
+        }
+
+        @include r($r-xs) {
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            grid-template-rows: repeat(2, minmax(0, 1fr));
+            grid-auto-rows: repeat(2, minmax(0, 1fr));
+        }
+
+    }
 }
